# cmake

calc/add/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
calc/add/include/: add.h
calc/add/src/: add.cpp
calc/div/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
calc/div/include/: div.h
calc/div/src/: div.cpp
calc/mul/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
calc/mul/include/: mul.h
calc/mul/src/: mul.cpp
calc/sub/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
calc/sub/include/: sub.h
calc/sub/src/: sub.cpp
calc/useLib/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
calc/useLib/include/: functions.h
calc/useLib/src/: main.cpp
vector/useLib/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
vector/useLib/include/: vector.h
vector/useLib/src/: main.cpp
vector/vector/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
vector/vector/src/: vector.cpp
